--- a/src/Enter.UI/Styles/_variables.scss
+++ b/src/Enter.UI/Styles/_variables.scss
@@ -1,9 +1,9 @@
 $breakpoints: (
-        mobile: 480px,
+        mobile: 576px,
         tablet: 768px,
-        laptop: 1024px,
-        desktop: 1280px,
-        screen: 1536px,
+        laptop: 992px,
+        desktop: 1200px,
+        screen: 1400px,
 );
 
 // Late
@@ -1307,6 +1307,24 @@ $utilities: (
                         unset: unset,
                         revert:revert,
                         auto:auto,
+                ),
+        ),
+        z-index:(
+                property: z-index,
+                propertyRtl: z-index,
+                cssName: z,
+                breakpoint: true,
+                values: (
+                        10: 10,
+                        20: 20,
+                        30:30,
+                        40:40,
+                        50: 50,
+                        60: 60,
+                        70:70,
+                        80:80,
+                        90:90,
+                        100:100,
                 ),
         )
 );
