--- a/src/Enter.UI/Styles/components/_ent_drawer.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_drawer.component.scss
@@ -11,8 +11,14 @@
     bottom: 0;
     top: 0;
     transition: all 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    background-color: white;
+ 
+    z-index: 10;
     
     &.ent-drawer--direction-start{
+
+      border-inline-end: $border;
+      
       &.ent-drawer--mode-behavior {
         &.ent-drawer--open {
           inset-inline-start: 0;
@@ -52,6 +58,9 @@
     }
 
     &.ent-drawer--direction-end{
+
+      border-inline-start: $border;
+      
       &.ent-drawer--mode-behavior {
         &.ent-drawer--open {
           inset-inline-end: 0;
