--- a/example/Enter.Dashboard/Components/FormLayout.razor
+++ b/example/Enter.Dashboard/Components/FormLayout.razor
@@ -36,7 +36,7 @@
                     class="tablet:col-1/3 mb-4 ent-form-group" 
                     Label="سن" 
                     For="()=> Input.Age">
-                    <EntInputText @bind-Value="Input.Age" />
+                    <EntInputFile @bind-Value="Input.Age" />
                 </EntInputGroup>
             </div>
             <div class="row">
