--- a/src/Enter.UI/Styles/components/_ent_toast.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_toast.component.scss
@@ -3,10 +3,31 @@
   background-color: white;
   padding: 1rem;
   min-width: 18rem;
+
+
+  &.ent-toast--open {
+    animation: ent-toast-open-anim 1s;
+  }
+
+  &.ent-toast--close {
+    animation: ent-toast-close-anim 1s;
+  }
+  
 }
 
 .ent-toast-provider {
   position: fixed;
   right: 1rem;
   bottom: 1rem;
+  z-index: 1000;
+}
+
+@keyframes ent-toast-open-anim {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes ent-toast-close-anim {
+  0% { opacity: 1; }
+  100% { opacity: 0; }
 }
